@@ -171,7 +171,10 @@ namespace MySql.Data.MySqlClient
                 }
                 catch (MySqlException ex)
                 {
-                    if (ex.Number == 1317) fetched = false;
+                    if (ex.IsQueryAborted)
+                        fetched = false;
+                    else
+                        throw;
                 }
 
                 if (!fetched)
@@ -254,7 +257,38 @@ namespace MySql.Data.MySqlClient
         {
             if (readDone) return;
 
-            while (driver.SkipDataRow()) { }
+            try
+            {
+                while (driver.SkipDataRow()) { }
+            }
+            catch (MySqlException ex)
+            {
+                // Ignore aborted queries
+                if (!ex.IsQueryAborted)
+                {
+                    // ignore IO exceptions.
+                    // We are closing or disposing reader, and  do not
+                    // want exception to be propagated to used. If socket is
+                    // is closed on the server side, next query will run into
+                    // IO exception. If reader is closed by GC, we also would 
+                    // like to avoid any exception here. 
+                    bool isIOException = false;
+                    for (Exception exception = ex; exception != null;
+                        exception = exception.InnerException)
+                    {
+                        if (exception is System.IO.IOException)
+                        {
+                            isIOException = true;
+                            break;
+                        }
+                    }
+                    if (!isIOException)
+                    {
+                        // Ordinary exception (neither IO nor query aborted)
+                        throw;
+                    }
+                }
+            }
             readDone = true;
 
             MySqlConnection connection = reader.Command.Connection;
