@@ -1,3 +1,4 @@
+- Ensure exceptions are not silently eaten inside MySqlDataReader.Read()  (Bug#53439)
 - Fix race condition (concurrent reading/modification of the same DataSet) in StoredProcedure.GetParameters()
   (bug#49118)
 - Fix problems with MySqlDataAdapter insert command, when batch size is > 1, and 
